--- a/views/admin-users-user-security-passwords.pug
+++ b/views/admin-users-user-security-passwords.pug
@@ -5,8 +5,8 @@ block admin-content
     .myaccount-stack-view
         a.myaccount-stack-view__box.myaccount-stack-view__box--related(href="change-password/")
             span Bester Intranet
-            img.myaccount-stack-view__box-image(src="https://static.besterintranet.com/assets/images/rightarrow16x16.png" srcset="https://static.besterintranet.com/assets/images/rightarrow32x32.png 2x")
+            img.myaccount-stack-view__box-image(src="https://" + static_domain + "/assets/images/rightarrow16x16.png" srcset="https://" + static_domain + "/assets/images/rightarrow32x32.png 2x")
         each service in services
             a.myaccount-stack-view__box.myaccount-stack-view__box--related(href="../../services/" + service.name + "/" + service.passwordPage)
                 span= service.title
-                img.myaccount-stack-view__box-image(src="https://static.besterintranet.com/assets/images/rightarrow16x16.png" srcset="https://static.besterintranet.com/assets/images/rightarrow32x32.png 2x")
+                img.myaccount-stack-view__box-image(src="https://" + static_domain + "/assets/images/rightarrow16x16.png" srcset="https://" + static_domain + "/assets/images/rightarrow32x32.png 2x")
