--- a/views/login.pug
+++ b/views/login.pug
@@ -7,7 +7,7 @@ block content
             table
                 tr
                     td
-                        img(src="https://static.besterintranet.com/assets/images/logo.png" srcset="https://static.besterintranet.com/assets/images/logo96x96.png 2x" height="48" width="48")
+                        img(src="https://" + static_domain + "/assets/images/logo.png" srcset="https://" + static_domain + "/assets/images/logo96x96.png 2x" height="48" width="48")
                     td
                         h1 Bester Intranet
         .clear
@@ -24,7 +24,7 @@ block content
                         value= username
                     )
                     .login-form__email-domain-dropdown
-                        img.login-form__email-domain-dropdown__image(src="https://static.besterintranet.com/assets/images/downarrow16x16.png" srcset="https://static.besterintranet.com/assets/images/downarrow32x32.png 2x")
+                        img.login-form__email-domain-dropdown__image(src="https://" + static_domain + "/assets/images/downarrow16x16.png" srcset="https://" + static_domain + "/assets/images/downarrow32x32.png 2x")
                         input.login-form__input#login-form__input-email-domain(
                             type='text'
                             name='emailDomain'
