--- a/views/myaccount-service-bestermail.pug
+++ b/views/myaccount-service-bestermail.pug
@@ -7,9 +7,9 @@ block myaccount-content
             a.myaccount-stack-view__box.myaccount-stack-view__box--related(href="")
                 span Email address
                 span.myaccount-stack-view__box-value #{service.service_user_id}
-                img.myaccount-stack-view__box-image(src="https://static.besterintranet.com/assets/images/rightarrow16x16.png" srcset="https://static.besterintranet.com/assets/images/rightarrow32x32.png 2x")
+                img.myaccount-stack-view__box-image(src="https://" + static_domain + "/assets/images/rightarrow16x16.png" srcset="https://" + static_domain + "/assets/images/rightarrow32x32.png 2x")
             a.myaccount-stack-view__box.myaccount-stack-view__box--related(href="")
                 span Aliases
-                img.myaccount-stack-view__box-image(src="https://static.besterintranet.com/assets/images/rightarrow16x16.png" srcset="https://static.besterintranet.com/assets/images/rightarrow32x32.png 2x")
+                img.myaccount-stack-view__box-image(src="https://" + static_domain + "/assets/images/rightarrow16x16.png" srcset="https://" + static_domain + "/assets/images/rightarrow32x32.png 2x")
     else
         p Unknown service
