--- a/views/error-custom.pug
+++ b/views/error-custom.pug
@@ -7,7 +7,7 @@ block content
             table
                 tr
                     td
-                        img(src="https://static.besterintranet.com/assets/images/logo.png" srcset="https://static.besterintranet.com/assets/images/logo96x96.png 2x" height="48" width="48")
+                        img(src="https://" + static_domain + "/assets/images/logo.png" srcset="https://" + static_domain + "/assets/images/logo96x96.png 2x" height="48" width="48")
                     td
                         h1 Bester Intranet
         .container--center.basic-header-body-container
