--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,22 +8,22 @@ html(lang='en-gb')
             title #{app.settings.title}
         if useBootstrap
             link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T' crossorigin='anonymous')
-        link(rel='stylesheet' href='https://www.besterintranet.' + tld + '/stylesheets/style.css' type='text/css')
+        link(rel='stylesheet' href='https://' + main_domain + '/stylesheets/style.css' type='text/css')
         meta(charset='UTF-8')
         meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
         meta(name='mobile-web-app-capable' content='yes')
         meta(name='manifest' href='/manifest.json')
-        link(rel="shortcut icon" href="https://static.besterintranet.com/favicon.ico" type="image/x-icon")
-        meta(name='icon' href='https://static.besterintranet.com/assets/images/logo48x48.png' type='image/png' sizes='48x48')
-        meta(name='icon' href='https://static.besterintranet.com/assets/images/logo192x192.png' type='image/png' sizes='192x192')
+        link(rel="shortcut icon" href="https://" + static_domain + "/favicon.ico" type="image/x-icon")
+        meta(name='icon' href='https://' + static_domain + '/assets/images/logo48x48.png' type='image/png' sizes='48x48')
+        meta(name='icon' href='https://' + static_domain + '/assets/images/logo192x192.png' type='image/png' sizes='192x192')
         meta(name='author' content='Ryan Bester')
         meta(name='keywords' content='bester intranet home')
         meta(name='description' content='Bester Intranet')
         meta(property='og:description' content='Bester Intranet')
         meta(property='og:title' content='Bester Intranet')
         meta(property='og:type' content='website')
-        meta(property='og:image' content='https://static.besterintranet.com/assets/images/logo512x512.png')
-        meta(property='og:url' content='https://www.besterintranet.com')
+        meta(property='og:image' content='https://' + static_domain + '/assets/images/logo512x512.png')
+        meta(property='og:url' content='https://' + main_domain)
         meta(name='theme-color' content='#FFFFFF')
         meta(name='apple-mobile-web-app-status-bar-style' content='black-translucent')
         meta(name='application-name' content='Bester Intranet')
@@ -32,13 +32,13 @@ html(lang='en-gb')
         meta(name='msapplication-starturl' content='/')
         script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
         script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js' integrity='sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1' crossorigin='anonymous')
-        script(src='https://www.besterintranet.' + tld + '/scripts/lib/jquery.ba-throttle-debounce.min.js')
+        script(src='https://' + main_domain + '/scripts/lib/jquery.ba-throttle-debounce.min.js')
         if scriptsBefore
             each script in scriptsBefore
                 script(src= script)
-        script(src='https://www.besterintranet.' + tld + '/scripts/dialog.js' async)
-        script(src='https://www.besterintranet.' + tld + '/scripts/notification.js' async)
-        script(src='https://www.besterintranet.' + tld + '/scripts/main.js' async)
+        script(src='https://' + main_domain + '/scripts/dialog.js' async)
+        script(src='https://' + main_domain + '/scripts/notification.js' async)
+        script(src='https://' + main_domain + '/scripts/main.js' async)
         script.
             if('serviceWorker' in navigator) {
             navigator.serviceWorker
@@ -51,7 +51,7 @@ html(lang='en-gb')
             each script in scriptsAfter
                 script(src= script)
 
-    body
+    body    
         .container
             block content
             .notification-container#notification-container
