--- a/views/myaccount-security-logout-everywhere.pug
+++ b/views/myaccount-security-logout-everywhere.pug
@@ -6,7 +6,7 @@ block myaccount-content
     .myaccount-stack-view
         a.myaccount-stack-view__box.myaccount-stack-view__box--related(href="other-devices/?nonce=" + otherDevicesNonce)
             span Keep me logged in
-            img.myaccount-stack-view__box-image(src="https://static.besterintranet.com/assets/images/rightarrow16x16.png" srcset="https://static.besterintranet.com/assets/images/rightarrow32x32.png 2x")
+            img.myaccount-stack-view__box-image(src="https://" + static_domain + "/assets/images/rightarrow16x16.png" srcset="https://" + static_domain + "/assets/images/rightarrow32x32.png 2x")
         a.myaccount-stack-view__box.myaccount-stack-view__box--related(href="all-devices/?nonce=" + allDevicesNonce)
             span Log me out everywhere
-            img.myaccount-stack-view__box-image(src="https://static.besterintranet.com/assets/images/rightarrow16x16.png" srcset="https://static.besterintranet.com/assets/images/rightarrow32x32.png 2x")
+            img.myaccount-stack-view__box-image(src="https://" + static_domain + "/assets/images/rightarrow16x16.png" srcset="https://" + static_domain + "/assets/images/rightarrow32x32.png 2x")
