--- a/views/myaccount-security-passwords.pug
+++ b/views/myaccount-security-passwords.pug
@@ -6,16 +6,16 @@ block myaccount-content
         .myaccount-stack-view
             a.myaccount-stack-view__box.myaccount-stack-view__box--related(href="/myaccount/security/passwords/change-password/")
                 span Bester Intranet
-                img.myaccount-stack-view__box-image(src="https://static.besterintranet.com/assets/images/rightarrow16x16.png" srcset="https://static.besterintranet.com/assets/images/rightarrow32x32.png 2x")
+                img.myaccount-stack-view__box-image(src="https://" + static_domain + "/assets/images/rightarrow16x16.png" srcset="https://" + static_domain + "/assets/images/rightarrow32x32.png 2x")
             each service in services
                 a.myaccount-stack-view__box.myaccount-stack-view__box--related(href="/myaccount/services/" + service.name + "/" + service.passwordPage)
                     span= service.title
-                    img.myaccount-stack-view__box-image(src="https://static.besterintranet.com/assets/images/rightarrow16x16.png" srcset="https://static.besterintranet.com/assets/images/rightarrow32x32.png 2x")
+                    img.myaccount-stack-view__box-image(src="https://" + static_domain + "/assets/images/rightarrow16x16.png" srcset="https://" + static_domain + "/assets/images/rightarrow32x32.png 2x")
     else
         .myaccount-stack-view
             a.myaccount-stack-view__box.myaccount-stack-view__box--related(href="/myaccount/security/passwords/change-password/")
                 span Bester Intranet
-                img.myaccount-stack-view__box-image(src="https://static.besterintranet.com/assets/images/rightarrow16x16.png" srcset="https://static.besterintranet.com/assets/images/rightarrow32x32.png 2x")
+                img.myaccount-stack-view__box-image(src="https://" + static_domain + "/assets/images/rightarrow16x16.png" srcset="https://" + static_domain + "/assets/images/rightarrow32x32.png 2x")
         if error
             p= error
         else
