--- a/views/myaccount-services.pug
+++ b/views/myaccount-services.pug
@@ -7,6 +7,6 @@ block myaccount-content
             each service in services
                 a.myaccount-stack-view__box.myaccount-stack-view__box--related(href="/myaccount/services/" + service.name + "/")
                     span #{service.title}
-                    img.myaccount-stack-view__box-image(src="https://static.besterintranet.com/assets/images/rightarrow16x16.png" srcset="https://static.besterintranet.com/assets/images/rightarrow32x32.png 2x")
+                    img.myaccount-stack-view__box-image(src="https://" + static_domain + "/assets/images/rightarrow16x16.png" srcset="https://" + static_domain + "/assets/images/rightarrow32x32.png 2x")
     else
         p No services
