Add authorization system and login feature

--- a/public/stylesheets/modal.less
+++ b/public/stylesheets/modal.less
@@ -1,4 +1,4 @@
-// Copyright (C) 2019 - 2020 Bester Intranet
+// Copyright (C) 2019 - 2020 Comimant
 
 @import (reference) "mixins";
 
@@ -32,7 +32,7 @@
         margin-bottom: 16px;
         font-size: 16px;
 
-        &:extend(.heading) {
+        .heading {
             font-size: 18px;
         }
     }
