--- a/public/stylesheets/variables.less
+++ b/public/stylesheets/variables.less
@@ -1,5 +1,5 @@
-// Copyright (C) 2019 - 2020 Bester Intranet
+// Copyright (C) 2019 - 2020 Comimant
 
 @input-hover-color: #CFDBFF;
-@input-focus-color: #CFFBFF;
+@input-focus-color: #CFDBFF;
 @input-disabled-color: #DDD;
