Remove old offline page template

--- a/views/accounts/login.pug
+++ b/views/accounts/login.pug
@@ -50,4 +50,4 @@ block content
                 )
             p.copyright-left= copyright
                 span.copyright-right= 'Powered by '
-                    a(href='https://github.com/ryanbester/comimant') Comimant
+                    a(href='https://github.com/ryanbester/comimant' target='_blank') Comimant
