--- a/views/accounts/my-account/layout.pug
+++ b/views/accounts/my-account/layout.pug
@@ -44,4 +44,4 @@ block layout
                 block my-account-content
                 p.copyright-left= copyright
                     span.copyright-right= 'Powered by '
-                        a(href='https://github.com/ryanbester/comimant') Comimant
+                        a(href='https://github.com/ryanbester/comimant' target='_blank') Comimant
