--- a/public/stylesheets/main.less
+++ b/public/stylesheets/main.less
@@ -59,11 +59,12 @@
 }
 
 .copyright-right {
-    &:extend(.copyright-left *);
+    &:extend(.copyright-left);
     float: right;
 
     a {
         color: inherit;
+        font-weight: inherit;
 
         &:hover {
             color: #999;
