--- a/public/stylesheets/my-account.less
+++ b/public/stylesheets/my-account.less
@@ -27,6 +27,17 @@
     }
 }
 
+.myaccount-subtitle-container {
+    a {
+        position: absolute;
+        margin: 0;
+    }
+
+    h2 {
+        padding: 6px;
+    }
+}
+
 .myaccount-stack-view__box {
     display: flex;
     border: 1px solid #666;
