--- a/public/stylesheets/variables.less
+++ b/public/stylesheets/variables.less
@@ -14,6 +14,8 @@
 // You should have received a copy of the GNU General Public License
 // along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
+@input-primary-hover-color: #002DB3;
+@input-primary-color: #416CEF;
 @input-hover-color: #CFDBFF;
 @input-focus-color: #CFDBFF;
 @input-disabled-color: #DDD;
