--- a/public/stylesheets/global.less
+++ b/public/stylesheets/global.less
@@ -46,8 +46,8 @@
 }
 
 * {
-    font-family: 'Arial', sans-serif;
-    font-weight: 500;
+    font-family: sans-serif;
+    font-weight: 300;
 }
 
 body {
