--- a/views/basic-layout.pug
+++ b/views/basic-layout.pug
@@ -7,7 +7,9 @@ block layout
             table
                 tr
                     td
-                        img(src='https://' + staticDomain + '/assets/images/logo.png' srcset='https://' + staticDomain + '/assets/images/logo96x96.png 2x' height='48' width='48')
+                        a.logo-link(href= protocol + mainDomain + '/')
+                            img(src='https://' + staticDomain + '/assets/images/logo.png' srcset='https://' + staticDomain + '/assets/images/logo96x96.png 2x' height='48' width='48')
                     td
-                        h1= app.settings.title
+                        a.logo-link(href= protocol + mainDomain + '/')
+                            h1= app.settings.title
         block content
