Add admin panel with user management

--- a/views/accounts/my-account/security/change-password.pug
+++ b/views/accounts/my-account/security/change-password.pug
@@ -7,26 +7,29 @@ block my-account-content
     if success
         h2.success= success
     form.myaccount-form(method='POST' action='')
-        label(for='myaccount-name-form-current-password') Current Password
-        input#myaccount-name-form-current-password(
-            type='password'
-            name='currentPassword'
-            placeholder='Current Password'
-        )
+        .form-row
+            label(for='myaccount-name-form-current-password') Current Password
+            input#myaccount-name-form-current-password(
+                type='password'
+                name='currentPassword'
+                placeholder='Current Password'
+            )
         br
-        label(for='myaccount-name-form-new-password') New Password
-        input#myaccount-name-form-new-password(
-            type='password'
-            name='newPassword'
-            placeholder='New Password'
-        )
+        .form-row
+            label(for='myaccount-name-form-new-password') New Password
+            input#myaccount-name-form-new-password(
+                type='password'
+                name='newPassword'
+                placeholder='New Password'
+            )
         br
-        label(for='myaccount-name-form-confirm-password') Confirm Password
-        input#myaccount-name-form-confirm-password(
-            type='password'
-            name='confirmPassword'
-            placeholder='Confirm Password'
-        )
+        .form-row
+            label(for='myaccount-name-form-confirm-password') Confirm Password
+            input#myaccount-name-form-confirm-password(
+                type='password'
+                name='confirmPassword'
+                placeholder='Confirm Password'
+            )
         br
         input(type='hidden' name='nonce' value=formNonce)
         input(
