--- a/views/accounts/my-account/my-info/username.pug
+++ b/views/accounts/my-account/my-info/username.pug
@@ -7,15 +7,16 @@ block my-account-content
     if success
         h2.success= success
     form.myaccount-form(method='POST' action='')
-        label(for='myaccount-name-form-username') Username
-        input#myaccount-name-form-username(
-            class=(usernameInvalid ? 'is-invalid' : undefined)
-            type='text'
-            name='username'
-            placeholder='Username'
-            value= username
-        )
-        .invalid-feedback This username has already been taken
+        .form-row
+            label(for='myaccount-name-form-username') Username
+            input#myaccount-name-form-username(
+                class=(usernameInvalid ? 'is-invalid' : undefined)
+                type='text'
+                name='username'
+                placeholder='Username'
+                value= username
+            )
+            .invalid-feedback This username has already been taken
         br
         input(type='hidden' name='nonce' value=formNonce)
         input(
