Add delete user feature and assets

--- a/views/admin/users/index.pug
+++ b/views/admin/users/index.pug
@@ -2,6 +2,8 @@
 extends ../layout
 
 block admin-content
+    if message
+        h2.success= message
     a.button(href='users/new') New user
     if hasPermission
         if users
