--- a/views/head.pug
+++ b/views/head.pug
@@ -15,7 +15,7 @@ html(lang='en-gb')
         meta(charset='UTF-8')
         meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
         meta(name='mobile-web-app-capable' content='yes')
-        link(rel='shortcut icon' href= staticProtocol + staticDomain + '/favicon.ico' type='image/x-icon')
+        link(rel='shortcut icon' href= staticProtocol + staticDomain + '/assets/images/favicon.ico' type='image/x-icon')
         link(rel='apple-touch-icon' sizes='180x180' href= staticProtocol + staticDomain + '/assets/images/logo180x180.png')
         link(rel='apple-touch-startup-image' href= staticProtocol + staticDomain + '/assets/images/logo192x192.png')
         link(rel='icon' href= staticProtocol + staticDomain + '/assets/images/logo48x48.png' type='image/png' sizes='48x48')
