--- a/views/accounts/my-account/layout.pug
+++ b/views/accounts/my-account/layout.pug
@@ -9,7 +9,7 @@ block layout
                     tr
                         td
                             a.logo-link(href= protocol + mainDomain + '/')
-                                img(src= staticProtocol + staticDomain + '/assets/images/logo.png' srcset= staticProtocol + staticDomain + '/assets/images/logo96x96.png 2x' height='48' width='48')
+                                img(src= staticProtocol + staticDomain + '/assets/images/logo48x48.png' srcset= staticProtocol + staticDomain + '/assets/images/logo96x96.png 2x' height='48' width='48')
                         td
                             a.logo-link(href= protocol + mainDomain + '/')
                                 h1= app.settings.title
