--- a/views/basic-layout.pug
+++ b/views/basic-layout.pug
@@ -8,7 +8,7 @@ block layout
                 tr
                     td
                         a.logo-link(href= protocol + mainDomain + '/')
-                            img(src='https://' + staticDomain + '/assets/images/logo.png' srcset='https://' + staticDomain + '/assets/images/logo96x96.png 2x' height='48' width='48')
+                            img(src='https://' + staticDomain + '/assets/images/logo48x48.png' srcset='https://' + staticDomain + '/assets/images/logo96x96.png 2x' height='48' width='48')
                     td
                         a.logo-link(href= protocol + mainDomain + '/')
                             h1= app.settings.title
