Add functionality to setup page

--- a/views/setup/install-database.pug
+++ b/views/setup/install-database.pug
@@ -9,6 +9,7 @@ block content
         if success
             h2.success= success
         p Check the following database options below before continuing. If any are incorrect, change them in the ecosystem file and restart Comimant.
+        p This process may take a while. Don't refresh your page if it seems like it's not responding.
         table
             tr
                 td Host
